--- a/css/admin.css
+++ b/css/admin.css
@@ -57,6 +57,31 @@ h1, h2, h3 {
     color: #009FD4;
 }
 
+/* --------------------------------------  PAGER ------------------------ */
+.pager_block {
+    border: 1px dotted #efefef;
+    height:25px;
+    clear:both;
+}
+.pager_block a, .pager_block span {
+    border:1px solid #300c00;
+    margin:5px;
+    padding:5px;
+    text-decoration: none;
+}
+.pager_block a:hover {
+    background-color: #976F68
+}
+.pager_form {
+    float:right;
+    text-align:right;
+    margin:2px;
+    margin-right:10px;
+}
+.pager_perpage {
+    border: 1px solid #300c00;
+}
+
 /* --------------------------------------  INDEX ------------------------ */
 #admenu_table {
     margin-left: 20px;
@@ -133,7 +158,7 @@ input, textarea, select, #addmdbtn, hr {
     padding: 3px;
 }
 /* -------------------------------------- / LOG_ERROR ------------------------ */
-    
+
 /* --------------------------------------  CRON ------------------------ */
 #crontable {
     background-color: #8A648A;
@@ -155,3 +180,9 @@ input, textarea, select, #addmdbtn, hr {
 }
 /* -------------------------------------- / CRON ------------------------ */
 
+/* --------------------------------------  POINTS ------------------------ */
+.points-editprop {
+    color:#4169E1;
+    text-decoration: none;
+    border-bottom: 1px dotted #4169E1;
+}
