--- a/templates/_admin/admpage.sm.html
+++ b/templates/_admin/admpage.sm.html
@@ -3,10 +3,10 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>{$title}</title>
-        <link rel="shortcut icon" href="../favicon.ico" />
-        <link rel="stylesheet" href="../css/admin.css" type="text/css" />
-        <script type="text/javascript" src="http://yandex.st/jquery/1.4.2/jquery.min.js"></script>
-        <script type="text/javascript" src="../js/admin.js"></script>
+        <link rel="shortcut icon" href="/favicon.ico" />
+        <link rel="stylesheet" href="/css/admin.css" type="text/css" />
+        <script type="text/javascript" src="http://yandex.st/jquery/1.11.0/jquery.min.js"></script>
+        <script type="text/javascript" src="/js/admin.js"></script>
     </head>
     <body>
         <div id="admheader">
