Перенос кода в отдельный файл

--- a/templates/_admin/points.list.sm.html
+++ b/templates/_admin/points.list.sm.html
@@ -91,7 +91,9 @@
         <td>{$point.country_name}</td>
         <td>{$point.region_name}</td>
         <td><a href="{$point.url}/" target="_blank">{$point.pc_title}</a></td>
-        <td><input type="button" class="points-moveto" data-oid="{$point.pt_id}" value=">" title="Переместить" /></td>
+        <td>
+            <input type="button" class="points-moveto" data-oid="{$point.pt_id}" value=">" title="Переместить" />
+        </td>
         <td><img src="/img/points/x16/{$point.tp_icon}"></td>
         <td>
             <a href="#" class="points-editprop" data-prop="pt_name" data-oid="{$point.pt_id}">
@@ -133,37 +135,3 @@
     {/foreach}
 </table>
 {$pager}
-
-<script>
-    $(document).ready(function() {
-        $(".points-moveto").click(function() {
-            var oid = $(this).data("oid");
-            alert(oid);
-            return false;
-        });
-        $(".points-editprop").click(function() {
-            var that = this;
-            var oid = $(that).data("oid");
-            var prop = $(that).data("prop");
-            $.get("points.php", {
-                act: "getprop",
-                oid: oid,
-                prop: prop
-            }, function(data) {
-                if (data.state) {
-                    var newval = prompt('Новое значение:', data.out);
-                    if (newval !== data.out) {
-                        $.post("points.php?act=setprop&oid=" + oid + "&prop=" + prop, {
-                            value: newval
-                        }, function(pdata) {
-                            if (pdata.state) {
-                                $(that).text(pdata.out);
-                            }
-                        });
-                    }
-                }
-            });
-            return false;
-        });
-    });
-</script>
