--- a/templates/_admin/points.list.sm.html
+++ b/templates/_admin/points.list.sm.html
@@ -78,8 +78,9 @@
         <th>Страна</th>
         <th>Регион</th>
         <th colspan="2">Город</th>
-        <th>Т</th>
+        <th title="Тип">Т</th>
         <th>Название</th>
+        <th title="Длина описания">Д</th>
         <th>Адрес</th>
         <th>Телефон</th>
         <th>Web</th>
@@ -96,12 +97,13 @@
         <td style="text-align: center;">
             <input type="button" class="points-moveto" data-oid="{$point.pt_id}" value=">" title="Переместить" />
         </td>
-        <td><img src="/img/points/x16/{$point.tp_icon}" alt="" title=""></td>
+        <td><img src="/img/points/x16/{$point.tp_icon}" alt="{$point.tp_short}" title="{$point.tp_name}"></td>
         <td>
             <a href="#" class="points-editprop" data-prop="pt_name" data-oid="{$point.pt_id}">
                 {$point.pt_name}
             </a>
         </td>
+        <td style="text-align: right;">{$point.descr_len}</td>
         <td>
             <a href="#" class="points-editprop" data-prop="pt_adress" data-oid="{$point.pt_id}">
                 {$point.pt_adress}
