--- a/templates/_admin/refs.list.sm.html
+++ b/templates/_admin/refs.list.sm.html
@@ -14,5 +14,5 @@
 <ul>
     <li><a href="cron.php">Задачи по расписанию</a></li>
     <li><a href="log_error.php">Журнал ошибок</a></li>
-
+    <li><a href="counters.php">Счётчики</a></li>
 </ul>
