Отображение даты актуализации информации

--- a/templates/_admin/stat_yandex.sm.html
+++ b/templates/_admin/stat_yandex.sm.html
@@ -39,6 +39,10 @@
                 <br />
                 <input type="submit" name="do_stack_empty" value="Сброс очереди отчётов" />
             </form>
+            <ul style="text-align:left;">
+                <li>позиции от: {$towns.date_positions}</li>
+                <li>запросы от: {$towns.date_weights}</li>
+            </ul>
         </td>
     </tr>
 </table>
