--- a/templates/_pages/pagecity.show.sm.html
+++ b/templates/_pages/pagecity.show.sm.html
@@ -91,7 +91,7 @@
             </td>
             <td>
                 <a href="object{$item.pt_id}.html" class="objlink" title="подробно: {$item.pt_name}"><strong>{$item.pt_name}</strong></a>
-                <a href="object{$item.pt_id}.html" title="{$item.pt_name}, открыть в новом окне" rel="external">
+                <a href="{$item.url_canonical}" title="{$item.pt_name}, открыть в новом окне" rel="external">
                     <img src="/img/new-window.png" alt=">" class="link_external" />
                 </a>
                 <br />
@@ -142,7 +142,7 @@
             </td>
             <td>
                 <a href="object{$item.pt_id}.html" class="objlink" title="подробно: {$item.pt_name}"><strong>{$item.pt_name}</strong></a>
-                <a href="object{$item.pt_id}.html" title="{$item.pt_name}, открыть в новом окне" rel="external"><img src="/img/new-window.png" alt=">" class="link_external" /></a>
+                <a href="{$item.url_canonical}" title="{$item.pt_name}, открыть в новом окне" rel="external"><img src="/img/new-window.png" alt=">" class="link_external" /></a>
                 <br />
                 <span class="point_short">{$item.short}</span>
                 <span class="hidden_overflow_bottom"></span>
