Исправление адреса скрипта

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -38,7 +38,7 @@
                 {if $page->globalsettings.key_bing}<meta name="msvalidate.01" content="{$page->globalsettings.key_bing}" />{/if}
                 {if $page->globalsettings.key_yahoo}<meta name="y_key" content="{$page->globalsettings.key_yahoo}" />{/if}
                 {/if}
-                <script src="http://api-maps.yandex.ru/2.0/?coordorder=longlat&amp;load=package.full&amp;wizard=constructor&amp;lang=ru-RU" type="text/javascript"></script>
+                <script src="http://api-maps.yandex.ru/2.0/?coordorder=longlat&load=package.full&wizard=constructor&lang=ru-RU" type="text/javascript"></script>
                 <link rel="alternate" type="application/rss+xml" title="RSS blog" href="{$page->globalsettings.main_rss}" />
                 </head>
                 <body>
