--- a/css/common.v2.8.css
+++ b/css/common.v2.8.css
@@ -243,9 +243,9 @@ ol {
 /*------------------------------- page CITY ----------------------------------*/
 #city_path {
     text-align: right;
-    border-top:2px solid #141414;
+    border-top: 2px solid #141414;
     background: #292929;
-    color:#fff;
+    color: #fff;
     padding: 0 5pt;
     background: -moz-linear-gradient(left,#292929,#fff);
     background: -webkit-gradient(linear, right top, left top, from(#292929), to(#fff));
@@ -386,7 +386,7 @@ ol {
 }
 #object_container {
     position:absolute;
-    height: 100%;
+    height:100%;
     left:30px;
     right:30px;
     bottom:0;
@@ -418,6 +418,7 @@ ol {
 }
 #object_description {
     position:relative;
+    margin-right: 505px;
 }
 #object_icon {
     float:left;
@@ -614,8 +615,8 @@ input.dogo {
 }
 /*------------------------------------- MAPS --------------------------*/
 #map_container {
-    float:right;
-    position:relative;
+    float: right;
+    position: relative;
     text-align: center;
 }
 #city_map {
