Ссылки в списке объектов

--- a/templates/_admin/lists.list.sm.html
+++ b/templates/_admin/lists.list.sm.html
@@ -1,8 +1,8 @@
 <img class="pageicon" src="/img/admin/ico.a_refs.gif" />
 <h3>{$title}</h3>
 
-<table style="background-color:teal; margin:10px auto; font-size: 80%;" cellpadding="3" cellspacing="1">
-    <tr style="background-color:#DCDCDC;">
+<table class="commontable" cellspacing="1">
+    <tr>
         <th>ID</th>
         <th>Наименование</th>
         <th>URL-часть</th>
@@ -13,7 +13,7 @@
         <th>&nbsp;</th>
     </tr>
     {foreach from=$lists item=list}
-    <tr style="background-color:#fff;">
+    <tr>
         <td style="text-align: center;">{$list.ls_id}</td>
         <td>{$list.ls_title}</td>
         <td><a href="/list/{$list.ls_slugline}.html" target="_blank">{$list.ls_slugline}</a></td>
