--- a/templates/_admin/lists.item.sm.html
+++ b/templates/_admin/lists.item.sm.html
@@ -58,8 +58,9 @@
         <td valign="top" style="width:70%">
 
             <b>Список входящих объектов</b>
-            <table>
+            <table class="commontable" cellspacing="1">
                 <tr>
+                    <th>№</th>
                     <th>ID</th>
                     <th>Регион</th>
                     <th>Название</th>
@@ -68,13 +69,22 @@
                 </tr>
                 {foreach from=$list_items item=li}
                 <tr>
-                    <td style="text-align: center;">{$li.li_pt_id}</td>
-                    <td>{$li.pc_title}</td>
-                    <td>{$li.pt_name}</td>
+                    <td style="text-align: center;">{counter}</td>
+                    <td style="text-align: center;">{$li.pt_id}</td>
+                    <td><a href="{$li.url_region}" target="_blank">{$li.pc_title}</a></td>
+                    <td><a href="{$li.url_canonical}" target="_blank">{$li.pt_name}</a></td>
                     <td style="text-align: center;">{$li.li_order}</td>
                     <td style="text-align: center;">{if $li.li_active}<b>ВКЛ</b>{else}откл{/if}</td>
                 </tr>
                 {/foreach}
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
             </table>
 
         </td>
