--- a/templates/list/list.sm.html
+++ b/templates/list/list.sm.html
@@ -18,7 +18,7 @@
     ymaps.ready(function() {
         var myMap = new ymaps.Map("list-map", {
             center: [37, 55],
-            zoom: 10,
+            zoom: 5,
             behaviors: ['default', 'scrollZoom']
         });
         myMap.controls.add("zoomControl").add("mapTools").add(new ymaps.control.TypeSelector(["yandex#map", "yandex#hybrid"]));
@@ -27,7 +27,7 @@
             autoSwitcher.addToMap(myMap);
         });
 
-        ymaps.geoXml.load("http://culttourism.ru/map/list/?lid=" + $("#list-id").val()).then(function(res) {
+        ymaps.geoXml.load("http://culttourism.ru/map/list/?z2&lid=" + $("#list-id").val()).then(function(res) {
             myMap.geoObjects.add(res.geoObjects);
             if (res.mapState) {
                 res.mapState.applyToMap(myMap);
