--- a/templates/list/list.sm.html
+++ b/templates/list/list.sm.html
@@ -27,11 +27,14 @@
             autoSwitcher.addToMap(myMap);
         });
 
-        ymaps.geoXml.load("http://culttourism.ru/map/list/?z2&lid=" + $("#list-id").val()).then(function(res) {
-            myMap.geoObjects.add(res.geoObjects);
-            if (res.mapState) {
-                res.mapState.applyToMap(myMap);
-            }
-        });
+        ymaps.geoXml.load("http://culttourism.ru/map/list/?lid=" + $("#list-id").val())
+                .then(function(res) {
+                    var bounds = res.mapState.getBounds();
+                    myMap.geoObjects.add(res.geoObjects);
+                    myMap.setBounds(bounds);
+                },
+                        function(error) {
+                            //console.log('Ошибка при загрузке YMapsML: ' + error.status + ' (' + error.message + ')');
+                        });
     });
 </script>
