Подсказка объектов при поиске

--- a/templates/_admin/lists.item.sm.html
+++ b/templates/_admin/lists.item.sm.html
@@ -58,47 +58,55 @@
         <td valign="top" style="width:70%">
 
             <b>Список входящих объектов</b>
-            <table class="commontable" cellspacing="1">
-                <tr>
-                    <th>№</th>
-                    <th>ID</th>
-                    <th>Регион</th>
-                    <th>Название</th>
-                    <th>Порядок</th>
-                    <th>Вес</th>
-                    <th>Активность</th>
-                </tr>
-                {foreach from=$list_items item=li}
-                <tr>
-                    <td style="text-align: center;">{counter}</td>
-                    <td style="text-align: center;">{$li.pt_id}</td>
-                    <td><a href="{$li.url_region}" target="_blank">{$li.pc_title}</a></td>
-                    <td><a href="{$li.url_canonical}" target="_blank">{$li.pt_name}</a></td>
-                    <td style="text-align: center;">{$li.li_order}</td>
-                    <td style="text-align: center;">{$li.pt_rank}</td>
-                    <td style="text-align: center;">{if $li.li_active}<b>ВКЛ</b>{else}откл{/if}</td>
-                </tr>
-                {/foreach}
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
+            <form method="post" action="?id={$list.ls_id}&act=add">
+                <table class="commontable" cellspacing="1">
+                    <tr>
+                        <th>№</th>
+                        <th>ID</th>
+                        <th>Регион</th>
+                        <th>Название</th>
+                        <th>Вес</th>
+                        <th>Порядок</th>
+                        <th>Активность</th>
+                    </tr>
+                    {foreach from=$list_items item=li}
+                    <tr>
+                        <td style="text-align: center;">{counter}</td>
+                        <td style="text-align: center;">{$li.pt_id}</td>
+                        <td><a href="{$li.url_region}" target="_blank">{$li.pc_title}</a></td>
+                        <td><a href="{$li.url_canonical}" target="_blank">{$li.pt_name}</a></td>
+                        <td style="text-align: center;">{$li.pt_rank}</td>
+                        <td style="text-align: center;">{$li.li_order}</td>
+                        <td style="text-align: center;">{if $li.li_active}<b>ВКЛ</b>{else}откл{/if}</td>
+                    </tr>
+                    {/foreach}
+                    <tr>
+                        <td><img src="/img/btn/btn.add.png" /></td>
+                        <td><input type="text" name="add_id" id="list-add-id" value="" style="width:4em" /></td>
+                        <td colspan="3"><input type="text" id="list-add-name" value="" style="width:98%" autocomplete="off" /></td>
+                        <td></td>
+                        <td><input type="submit" value="добавить" /></td>
+                    </tr>
+                </table>
+            </form>
 
         </td>
     </tr>
 </table>
 
 
+<script src="http://cult.localhost/js/jquery.autocomplete.min.js"></script>
 <script>
     CKEDITOR.replace('ls_text', {
         customConfig: '/config/config.cke4.js',
         height: '200px',
         toolbar: 'Lite'
+    });
+    $('#list-add-name').autocomplete({
+        serviceUrl: "lists.php?suggest",
+        paramName: "query",
+        onSelect: function(suggestion) {
+            $('#list-add-id').val(suggestion.oid);
+        }
     });
 </script>
