Автоподсказка с учетом наличия в списке

--- a/templates/_admin/lists.item.sm.html
+++ b/templates/_admin/lists.item.sm.html
@@ -103,7 +103,7 @@
         toolbar: 'Lite'
     });
     $('#list-add-name').autocomplete({
-        serviceUrl: "lists.php?suggest",
+        serviceUrl: "lists.php?suggest&lid={$list.ls_id}",
         paramName: "query",
         onSelect: function(suggestion) {
             $('#list-add-id').val(suggestion.oid);
